src/rules/iptables.rules
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Jul 27 16:59:56 2025
*filter
:INPUT ACCEPT [834764:139838637]
:FORWARD ACCEPT [106:8056]
:OUTPUT ACCEPT [812447:126095130]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:MUD_CHAIN - [0:0]
-A FORWARD -s 192.168.10.100/32 -j MUD_CHAIN
-A FORWARD -s 13.248.169.48/32 -d 192.168.10.100/32 -p tcp -m tcp --sport 443 -j ACCEPT
-A FORWARD -s 76.223.54.146/32 -d 192.168.10.100/32 -p tcp -m tcp --sport 443 -j ACCEPT
-A FORWARD -s 8.8.8.8/32 -d 192.168.10.100/32 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -s 8.8.4.4/32 -d 192.168.10.100/32 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -s 0.0.0.0/32 -d 192.168.10.100/32 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -s 0.0.0.0/32 -d 192.168.10.100/32 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -s 137.204.24.23/32 -d 192.168.10.100/32 -p tcp -m tcp --sport 443 -j ACCEPT
-A FORWARD -s 0.0.0.0/32 -d 192.168.10.100/32 -p tcp -m tcp --sport 443 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i oai-cn5g ! -o oai-cn5g -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-free5gc ! -o br-free5gc -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o oai-cn5g -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-free5gc -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A MUD_CHAIN -s 192.168.10.100/32 -d 76.223.54.146/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A MUD_CHAIN -s 192.168.10.100/32 -d 13.248.169.48/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A MUD_CHAIN -s 192.168.10.100/32 -d 8.8.4.4/32 -p udp -m udp --dport 53 -j ACCEPT
-A MUD_CHAIN -s 192.168.10.100/32 -d 8.8.8.8/32 -p udp -m udp --dport 53 -j ACCEPT
-A MUD_CHAIN -s 192.168.10.100/32 -d 0.0.0.0/32 -p udp -m udp --dport 53 -j ACCEPT
-A MUD_CHAIN -s 192.168.10.100/32 -d 0.0.0.0/32 -p udp -m udp --dport 53 -j ACCEPT
-A MUD_CHAIN -s 192.168.10.100/32 -d 137.204.24.23/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A MUD_CHAIN -s 192.168.10.100/32 -d 0.0.0.0/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A MUD_CHAIN -s 192.168.10.100/32 -j DROP
COMMIT
# Completed on Sun Jul 27 16:59:56 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Sun Jul 27 16:59:56 2025
*nat
:PREROUTING ACCEPT [3807:754791]
:INPUT ACCEPT [3698:744203]
:OUTPUT ACCEPT [78157:5499819]
:POSTROUTING ACCEPT [78157:5499819]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 10.100.200.0/24 ! -o br-free5gc -j MASQUERADE
-A POSTROUTING -s 192.168.70.128/26 ! -o oai-cn5g -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.10.0/24 -o eno1 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i oai-cn5g -j RETURN
-A DOCKER -i br-free5gc -j RETURN
COMMIT
# Completed on Sun Jul 27 16:59:56 2025
